# FlaskSQLAlchemyBaseModel

./: LICENSE  README.md  publish  pyproject.toml  requirements.txt
.github/workflows/: installation.yml  tests.yml
flasksqlalchemybasemodel/: __init__.py  src.py
tests/: app.py  testAll.py
tests/.github/workflows/: tests.yml
tests/database/: README.md  test.db
